--- a/TwitchBotAsta/TwitchBotAsta.csproj
+++ b/TwitchBotAsta/TwitchBotAsta.csproj
@@ -127,8 +127,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bot.cs" />
+    <Compile Include="Cooldown.cs" />
+    <Compile Include="FileManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task.cs" />
+    <Compile Include="TaskCommandManager.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
